# makarov_labs

./: #include iostream  README.md
Makarov_laba1/: CMakeLists.txt  main.c
glfw-3.3/tests/: CMakeLists.txt
lab2/: CMakeLists.txt  create_window.c  library.h  main.c
lab2Pasha/: CMakeLists.txt  MainWindow.cpp  mll.cpp  mll.h
lab3/: main_nik.cpp  main_timur.cpp
lab3Timur/: CMakeLists.txt
laba1/: CMakeLists.txt  a.out  create_window.c  library.h  line_here.c  main.c
